--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="./files/style2.css">
     <script src="https://kit.fontawesome.com/e4fb871c71.js" crossorigin="anonymous"></script>
 </head>
-  
+
 <body>
+
+
     <section class="main-page">
 
     <header class="heading">
@@ -32,30 +34,30 @@
         </div>
 
         <div class="languages-skills-frameworks">
-            <div class="languages">
-                <span>Languages</span>
+            <ul class="languages">
+                <li class="group">Languages</li>
                <li class="word"> Javascript</li>
                <li class="word"> Ruby </li>
                <li class="word"> html </li>
                <li class="word"> html </li>
                <li class="word"> Css </li>
-            </div>
-            <div class="frameworks">
-                <span>Frameworks</span>
+            </ul>
+            <ul class="frameworks">
+                <li class="group">Frameworks</li>
                <li class="word"> Bootstrap</li>
                <li class="word"> Ruby on rails</li>
                 <li class="word"> RSPec</li>
                 <li class="word"> CapyBara</li>
                <li class="word"> Selenium </li>
-            </div>
+            </ul>
 
-            <div class="skills">
-                <span>Skills</span>
+            <ul class="skills">
+                <li class="group">Skills</li>
                <li class="word"> CodeKit </li>
                <li class="word"> GitHub </li>
                <li class="word"> CodePen </li>
                <li class="word"> Terminal </li>
-            </div>
+            </ul>
          </div>
 
 
@@ -63,7 +65,7 @@
                 .
             </div>
             <div class="icon-work">
-                <div class="icons">
+                <ul class="icons">
                     <li class="github-icon">
                 <i class="fa-brands fa-github"></i></li>
                 <li class="linkedIn-icon">
@@ -74,7 +76,8 @@
                 <i class="fa-brands fa-twitter"></i></li>
                 <li class="M-icon">
                 <i class="fa-solid fa-m"></i></li>
-                </div>
+                </ul>
+            </div>
 
                 <div class="work-down-arrow"> 
                 <div class="icon">
@@ -82,8 +85,10 @@
                     </div>
                    <div class="wor" > work </div> 
                  </div> 
-        
+    </div>            
 </section>
+        
+
 
 
 <section class="work">
@@ -95,91 +100,97 @@
 
     <div class="line">.</div>
  
-   <img class="image" src="" alt="">
+   <img class="image" src="Screenshot(349).png" alt="white">
 
    <h3>Multi-Post Stories</h3>
 
    <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
 
-<div class="skil">
+<ul class="skil">
    <li class="skill">css</li>
-   <div class="vector">.</div>
+   <li class="vector">.</li>
    <li class="skill">html</li>
-   <div class="vector">.</div>
+   <li class="vector">.</li>
    <li class="skill">bootstrap</li>
-   <div class="vector">.</div>
+   <li class="vector">.</li>
    <li class="skill">ruby</li>
-</div>
+</ul>
 
-   <button class="btn"> <P class="btn-p"> See Project</P></button>
+   <button class="btn" type="button"> See Project </button>
 
 </section> 
 
 <section class="work2">
  
-   <img class="image" src="" alt="">
+   <img class="image" src="Screenshot(349).png" alt="white">
 
    <h3>Multi-Post Stories</h3>
 
    <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
 
-<div class="skil">
+<ul class="skil">
    <li class="skill">css</li>
-   <div class="vector">.</div>
+   <li class="vector">.</li>
    <li class="skill">html</li>
-   <div class="vector">.</div>
+   <li class="vector">.</li>
    <li class="skill">bootstrap</li>
-   <div class="vector">.</div>
+   <li class="vector">.</li>
    <li class="skill">ruby</li>
-</div>
+</ul>
 
-   <button class="btn"> <P class="btn-p"> See Project</P></button>
- 
+   <button class="btn btn-p" type="button">  See Project </button>
+
 </section> 
  
 <section class="work2">
  
-    <img class="image" src="" alt="">
+    <img class="image" src="Screenshot(349).png" alt="white">
  
     <h3>Multi-Post Stories</h3>
  
     <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
  
- <div class="skil">
+ <ul class="skil">
     <li class="skill">css</li>
-    <div class="vector">.</div>
+    <li class="vector">.</li>
     <li class="skill">html</li>
-    <div class="vector">.</div>
+    <li class="vector">.</li>
     <li class="skill">bootstrap</li>
-    <div class="vector">.</div>
+    <li class="vector">.</li>
     <li class="skill">ruby</li>
- </div>
+ </ul>
  
-    <button class="btn"> <P class="btn-p"> See Project</P></button>
+    <button class="btn" type="button" > See Project </button>
   
  </section> 
 
  <section class="work2">
  
-    <img class="image" src="" alt="">
+    <img class="image" src="Screenshot(349).png" alt="white">
  
     <h3>Multi-Post Stories</h3>
  
     <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
  
- <div class="skil">
+ <ul class="skil">
     <li class="skill">css</li>
-    <div class="vector">.</div>
+    <li class="vector">.</li>
     <li class="skill">html</li>
-    <div class="vector">.</div>
+    <li class="vector">.</li>
     <li class="skill">bootstrap</li>
-    <div class="vector">.</div>
+    <li class="vector">.</li>
     <li class="skill">ruby</li>
- </div>
+ </ul>
  
-    <button class="btn"> <P class="btn-p"> See Project</P></button>
+    <button class="btn" type="button" >  See Project</button>
   
  </section> 
+
+
+
+
+
+ 
 
  <section class="contact"> 
 
@@ -189,22 +200,22 @@
     if you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it
 </p>
 
-<form action="">
+<form >
     <input class="text-inp" type="text" placeholder="   Text Input">
 
     <input class="email" type="text" placeholder="Jeremy@gmail.com">
 
-    <textarea class="send-text" name="" id="" cols="30" rows="10" placeholder="
+    <textarea class="send-text" cols="30" rows="10" placeholder="
 Enter text here"></textarea>
 </form>
 
-<button class="btn-sec"> <P class="btn-p"> See Project</P></button>
+<button type="button" class="btn-sec"> See Project </button>
 
 <div class="cont-line">.</div>
 
-</div>
 
-<div class="icons">
+
+<ul class="icons">
     <li class="github-icon">
 <i class="fa-brands fa-github"></i></li>
 <li class="linkedIn-icon">
@@ -215,20 +226,13 @@ Enter text here"></textarea>
 <i class="fa-brands fa-twitter"></i></li>
 <li class="M-icon">
 <i class="fa-solid fa-m"></i></li>
-</div>
+</ul>
 
 <div class="my-mail">emailhere@email.com</div>
 
 </section> 
 
-               <div class="work-down-arrow">
-                <div class="icon">
-                    <i class="fa-solid fa-arrow-down"></i>
-                    </div>
-                <div class="work"> work </div>
-              </div>
-            </div>
-    </div>
+
 
 </body>
 </html>
