added grid display
used grid to correct page overflows.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 
 <body>
 
-
     <section class="main-page">
 
-    <header class="heading">
-        <nav>
-            <i class="fa-solid fa-bars"></i>
-        </nav>
-            <a href="index.html" class="logo">RITE</a>
+    <header class="heading"><a href="index.html" class="logo">RITE</a>
+        <nav><i class="fa-solid fa-bars"></i></nav>  
     </header>
 
     <div class="head-liner">
@@ -91,7 +87,7 @@
 
 
 
-<section class="work">
+<div class="work">
       
     <div class="title-work">
      <h2 class="recent">MY RECENT</h2>
@@ -100,7 +96,8 @@
 
     <div class="line">.</div>
  
-   <img class="image" src="Screenshot(349).png" alt="white">
+   <div class="image"> </div>
+
 
    <h3>Multi-Post Stories</h3>
 
@@ -118,11 +115,11 @@
 
    <button class="btn" type="button"> See Project </button>
 
-</section> 
+</div> 
 
-<section class="work2">
+<div class="work2">
  
-   <img class="image" src="Screenshot(349).png" alt="white">
+    <div class="image"> </div>
 
    <h3>Multi-Post Stories</h3>
 
@@ -140,11 +137,11 @@
 
    <button class="btn btn-p" type="button">  See Project </button>
 
-</section> 
+</div> 
  
-<section class="work2">
+<div class="work3">
  
-    <img class="image" src="Screenshot(349).png" alt="white">
+    <div class="image"> </div>
  
     <h3>Multi-Post Stories</h3>
  
@@ -162,11 +159,11 @@
  
     <button class="btn" type="button" > See Project </button>
   
- </section> 
+</div> 
 
- <section class="work2">
+ <div class="work4">
  
-    <img class="image" src="Screenshot(349).png" alt="white">
+    <div class="image"> </div>
  
     <h3>Multi-Post Stories</h3>
  
@@ -184,26 +181,20 @@
  
     <button class="btn" type="button" >  See Project</button>
   
- </section> 
-
-
-
-
-
- 
+</div>
 
  <section class="contact"> 
 
-    <h2 class="title contact">CONTACT US</h2>
+    <h2 class="conta">CONTACT US</h2>
 
 <p class="cont-text">
     if you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it
 </p>
 
 <form >
-    <input class="text-inp" type="text" placeholder="   Text Input">
+    <input class="text-inp" type="text" placeholder=" Text Input">
 
-    <input class="email" type="text" placeholder="Jeremy@gmail.com">
+    <input class="email" type="text" placeholder=" Jeremy@gmail.com">
 
     <textarea class="send-text" cols="30" rows="10" placeholder="
 Enter text here"></textarea>
@@ -231,8 +222,6 @@ Enter text here"></textarea>
 <div class="my-mail">emailhere@email.com</div>
 
 </section> 
-
-
 
 </body>
 </html>
