--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ademomla's Portfolio</title>
-    <link rel="stylesheet" href="./files/style.css">
-    <link rel="stylesheet" href="./files/style2.css">
+    <link rel="stylesheet" href="./css-files/style.css">
+    <link rel="stylesheet" href="./css-files/style2.css">
+    <link rel="stylesheet" href="./css-files/style3.css">
     <script src="https://kit.fontawesome.com/e4fb871c71.js" crossorigin="anonymous"></script>
 </head>
 
@@ -193,20 +194,27 @@
     if you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it
 </p>
 
-<form >
-    <input class="text-inp" type="text" placeholder=" Text Input">
-
-    <input class="email" type="text" placeholder=" Jeremy@gmail.com">
-
-    <textarea class="send-text" cols="30" rows="10" placeholder="
-Enter text here"></textarea>
-</form>
-
-<button type="button" class="btn-sec"> See Project </button>
-
-<div class="cont-line">.</div>
-
-
+    <form action="https://formspree.io/f/mlezygyr" method="post">
+        <ul class="input-list">
+         <li>
+           <label for="name">Name:</label>
+           <input type="text" id="name" name="user_name" placeholder="  Name" maxlength="30"required >
+         </li>
+         <li>
+           <label for="mail">E-mail:</label>
+           <input type="email" id="mail" name="user_email" placeholder="  E-mail" required>
+         </li>
+         <li>
+           <label for="msg">Message:</label>
+           <textarea type="text" cols="33" rows="16"  id="msg" name="user_message" 
+           placeholder=" 
+ Enter text here" maxlength="500" required ></textarea>
+         </li>
+         <li class="button">
+           <button type="submit" id="bttn"> see project </button>
+         </li>
+        </ul>
+       </form>
 
 <ul class="icons">
     <li class="github-icon">
@@ -220,10 +228,7 @@ Enter text here"></textarea>
 <li class="M-icon">
 <i class="fa-solid fa-m"></i></li>
 </ul>
-
 <div class="my-mail">emailhere@email.com</div>
-
 </section> 
-
 </body>
 </html>
