--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <ul class="input-list">
          <li>
            <label for="name">Name:</label>
-           <input type="text" id="name" name="user_name" placeholder="  Name" maxlength="30"required >
+           <input type="text" id="name" name="user_name" placeholder="  Name" maxlength="30" required>
          </li>
          <li>
            <label for="mail">E-mail:</label>
@@ -206,7 +206,7 @@
          </li>
          <li>
            <label for="msg">Message:</label>
-           <textarea type="text" cols="33" rows="16"  id="msg" name="user_message" 
+           <textarea cols="33" rows="16"  id="msg" name="user_message" 
            placeholder=" 
  Enter text here" maxlength="500" required ></textarea>
          </li>
