updated Html and css
I did the changes the reviewer told me to do

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="icon">
                     <i class="fa-solid fa-arrow-down"></i>
                     </div>
-                   <div class="wor" > work </div> 
+                   <div class="wor"> work </div> 
                  </div> 
     </div>            
 </section>
@@ -211,7 +211,7 @@
  Enter text here" maxlength="500" required ></textarea>
          </li>
          <li class="button">
-           <button type="submit" id="bttn"> see project </button>
+           <button type="submit" id="form-btn"> see project </button>
          </li>
         </ul>
        </form>
