--- a/index.HTML
+++ b/index.HTML
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ademomla's Portfolio</title>
-    <link rel="stylesheet" href="./files/style.css">
+    <link rel="stylesheet" href="css-files\style.css">
+    <link rel="stylesheet" href="css-files\style2.css">
+    <link rel="stylesheet" href="css-files\style3.css">
     <script src="https://kit.fontawesome.com/e4fb871c71.js" crossorigin="anonymous"></script>
 </head>
 
@@ -59,6 +61,7 @@
          </div>
             <div class="after-about">
             </div>
+            
             <div class="icon-work">
                 <div class="icons">
                     <li class="github-icon">
