corrected textarea's placeholder

--- a/index.html
+++ b/index.html
@@ -291,8 +291,7 @@
            <input type="text" id="name" name="user_name" placeholder="  Name" maxlength="30" required>  
            <input type="email" id="mail" name="user_email" placeholder="  E-mail" required>
            <textarea cols="33" rows="16"  id="msg" name="user_message" 
-           placeholder=" 
- Enter text here" maxlength="500" required ></textarea>
+           placeholder=" Enter text here" maxlength="500" required ></textarea>
          
          <div class="button">
            <button type="submit" id="bttn"> see project </button>
