--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </header>
         <div class="lor">.</div>
        </section>
-       
+
 <section class="real-page">
 
     <section class="main-page">
@@ -380,7 +380,7 @@
    </div>
 </section> 
 
-<div class="feet" style="display: none;">
+<div class="feet">
 <ul class="icons">
         <li class="github-icon">
     <i class="fa-brands fa-github"><a href="https://github.com/Ademola-coding"></a></i></li>
