trying to fix linter error

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-   <-- The pop-up section -->
-	   <section class="pop-up" style="display: none;">
+   <!-- The pop-up section -->
+	   <section class="pop-up">
         <header class="pop-head">
             <div class="line-one">
             <a href="index.html" class="lo">.</a>
