--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 
    <!-- The pop-up section -->
-	   <section class="pop-up">
-        <header class="pop-head">
+	   <div class="pop-up">
+        <div class="pop-head">
             <div class="line-one">
             <a href="index.html" class="lo">.</a>
           <nav class="nav2">
-            <button class="hamburger is-active">
-                <div class="bar"></div>
+            <button class="hamburger is-active" type="button">
+                <span class="bar"></span>
             </button>      
           </nav>
         </div>
@@ -37,11 +37,11 @@
            </div>
           </div>
 
-        </header>
+        </div>
         <div class="lor">.</div>
-       </section>
+    </div>
 
-<section class="real-page">
+<div class="real-page">
 
     <section class="main-page">
        <header class="heading-Mob">
@@ -49,8 +49,8 @@
             <a href="index.html" class="logo">RITE</a>
 
           <nav class="nav1">
-            <button class="hamburger">
-				<div class="bar"></div>
+            <button class="hamburger" type="button">
+				<span class="bar"></span>
             </button>
           </nav>
        </header>
@@ -67,7 +67,7 @@
     </header>
     
         <div class="head-liner-Mob">
-        <h1 id="abt" class="intro">ADEMOLA OWOEYE</h1>
+        <h2 id="abt" class="intro">ADEMOLA OWOEYE</h2>
         <P class="title"> Software Developer </P>
         <p class="about">
             I can help you build a product. feature or website look through some of my work and experience! if you like what you see and have a project you need coded, don't hestiate to contact me.
@@ -399,7 +399,7 @@
    
 </div>
 
-</section>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
