corrected background image link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
    <!-- The pop-up section -->
-	   <div class="pop-up">
+	   <div class="pop-up" id="pops">
         <div class="pop-head">
             <div class="line-one">
             <a href="index.html" class="lo">.</a>
