updared the html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,34 @@
 
 <body>
 
-   <!-- The pop-up section -->
+    <section class="the-pop-up" id="poped">
+        <span id="x-mark"> <i class="fa-solid fa-x" ></i> </span>
+     <h2 class="p-topic">Multi-Post Stories</h2>
+     <img class="snapshoot"  src="images/pop-up.png" alt="pop-up snapshoot">
+     <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting  ever since the 1500s, when an unknown printer took a galley of type veris lapoa todoe.
+     </p>
+     <ul class="skil" id="ski">
+         <li class="vecto">.</li>
+         <li class="skill">html</li>
+         <li class="vecto">.</li>
+         <li class="skill">css</li>
+         <li class="vecto">.</li>
+         <li class="skill">ruby on rails</li>
+         <li class="vecto">.</li>
+      </ul>
+     <div class="btncontainer">
+         <button class="bt1"  type="button"> 
+             See live<span> <i class="fa-solid fa-up-right-from-square"></i> </span>
+         </button>
+      <button  class="bt2" type="button">
+           See Project
+            <i class="fa-brands fa-github"></i></button>
+     </div>
+ </section>
+
+
+
+   <!-- The menu section -->
 	   <div class="pop-up" id="pops">
         <div class="pop-head">
             <div class="line-one">
