--- a/index.html
+++ b/index.html
@@ -209,38 +209,7 @@
         <li class="skill">ruby</li>
      </ul>
 
-     <button class="btn" type="button" > See Project </button>
-    </div>
-    <div class="work-M"> 
-        <div class="image"> </div>
-        <h3>Multi-Post Stories</h3>
-        <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
-     <ul class="skil">
-        <li class="skill">css</li>
-        <li class="vector">.</li>
-        <li class="skill">html</li>
-        <li class="vector">.</li>
-        <li class="skill">bootstrap</li>
-        <li class="vector">.</li>
-        <li class="skill">ruby</li>
-     </ul>
-     <button class="btn" type="button" > See Project </button>
-    </div>
-
-    <div class="work-M"> 
-        <div class="image"> </div>
-        <h3>Multi-Post Stories</h3>
-        <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
-     <ul class="skil">
-        <li class="skill">css</li>
-        <li class="vector">.</li>
-        <li class="skill">html</li>
-        <li class="vector">.</li>
-        <li class="skill">bootstrap</li>
-        <li class="vector">.</li>
-        <li class="skill">ruby</li>
-     </ul>
-     <button class="btn" type="button" > See Project </button>
+     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
     </div>
 
     <div class="work-M"> 
@@ -257,7 +226,41 @@
         <li class="skill">ruby</li>
      </ul>
 
-     <button class="btn" type="button" > See Project </button>
+     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+     
+    </div>
+
+    <div class="work-M"> 
+        <div class="image"> </div>
+        <h3>Multi-Post Stories</h3>
+        <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
+     <ul class="skil">
+        <li class="skill">css</li>
+        <li class="vector">.</li>
+        <li class="skill">html</li>
+        <li class="vector">.</li>
+        <li class="skill">bootstrap</li>
+        <li class="vector">.</li>
+        <li class="skill">ruby</li>
+     </ul>
+     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+    </div>
+
+    <div class="work-M"> 
+        <div class="image"> </div>
+        <h3>Multi-Post Stories</h3>
+        <p class="text">  A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text. </p>
+     <ul class="skil">
+        <li class="skill">css</li>
+        <li class="vector">.</li>
+        <li class="skill">html</li>
+        <li class="vector">.</li>
+        <li class="skill">bootstrap</li>
+        <li class="vector">.</li>
+        <li class="skill">ruby</li>
+     </ul>
+
+     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
     </div>
 
 <div class="work1-D">
