--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <li class="skill">ruby</li>
      </ul>
 
-     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+     <button class="btn" type="button" > See Project  </button>
     </div>
 
     <div class="work-M"> 
@@ -228,7 +228,7 @@
         <li class="skill">ruby</li>
      </ul>
 
-     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+     <button class="btn" type="button" > See Project  </button>
      
     </div>
 
@@ -245,7 +245,7 @@
         <li class="vector">.</li>
         <li class="skill">ruby</li>
      </ul>
-     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+     <button class="btn" type="button" > See Project  </button>
     </div>
 
     <div class="work-M"> 
@@ -262,7 +262,7 @@
         <li class="skill">ruby</li>
      </ul>
 
-     <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+     <button class="btn" type="button" > See Project  </button>
     </div>
 
 <div class="work1-D">
@@ -282,7 +282,7 @@
    <li class="vector">.</li>
    <li class="skill">ruby</li>
 </ul>
-<a href="#poped"> <button class="btn" type="button" > See Project  </button></a>
+<button class="btn" type="button" > See Project  </button>
             </div>
 </div> 
 
@@ -303,7 +303,7 @@
     <li class="vector">.</li>
     <li class="skill">ruby</li>
  </ul>
- <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+ <button class="btn" type="button" > See Project  </button>
              </div>
  </div> 
 
@@ -325,7 +325,7 @@
     <li class="skill">ruby</li>
  </ul>
 
-    <a href="#poped"><button class="btn" type="button">See Project</button></a>
+ <button class="btn" type="button">See Project</button>
              </div>
  </div> 
  
@@ -345,7 +345,7 @@
      <li class="vector">.</li>
      <li class="skill">ruby</li>
   </ul>
-  <a href="#poped"><button class="btn" type="button" > See Project  </button></a>
+  <button class="btn" type="button" > See Project  </button>
               </div>
   </div> 
 </section>
