improve pop-up background image

--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
  <!-- pop up for desktop -->
 
  <section class="the-pop-upD" id="popedD">
+     <!-- <div class="pop-container"> -->
     <span id="x-markD"> <i class="fa-solid fa-x"></i> </span>
 
     <h2 class=" p-topicD">default</h2>
 
     <img class="snapshootD"  src="images/pop-upD.png" alt="pop-up snapshoot">
+    <div class="backgimage"><img src="images/circle1x.png" alt="backimg"></div>
+    <div class="backgimg"><img src="images/circle2.png" alt="backimg"></div>
     
     <p class="descriptionD">default</p>
 
@@ -79,6 +82,7 @@
            <i class="fa-brands fa-github"></i>
         </button>
      </div>
+    <!-- </div> -->
 </section>
 
 
