setup desktop contact validation

--- a/index.html
+++ b/index.html
@@ -457,8 +457,9 @@
   Write your message here" maxlength="500" required ></textarea>
             
              <div class="button">
-               <button type="submit" id="bttn-D"> send </button>
+               <button type="submit" id="bttn-D" class="bomD"> send </button>
              </div>
+             <span class="errmsgD"></span>
            </form>
 
            <div class="cont-line">.</div>
